[ci] Use non deprecated new instance